actualizacion con enlaces y estados de git

--- a/webpri.html
+++ b/webpri.html
@@ -2,14 +2,14 @@
 <html>
     <head>
         <title>
-            primera web       
+            <H1>CURSO DE HTML</H1>        
         </title>
     </head>
     <body>
-        <h1>HOLA MUNDO</h1>
+        <h1>ESTRUCTURACION</h1>
         <ol>
-            <li>lista 1</li>
-            <li>lista 2</li>
+            <li><a href="cursogit.html">Git y sus tres estados</a></li>
+            <li><a href="imagenes/imagen.html">imagen de prueba</a></li>
             <li>lista 3</li>
         </ol>
     </body>
