--- a/codigo/biblioteca.html
+++ b/codigo/biblioteca.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title><h1>BIBLIOTECA DE CODIGO</h1></title>
-        <link rel="stylesheet" href="../estilos css/estilobli.css"              
+        <link rel="stylesheet" href="../estilos css/estilobli.css">             
     </head>
 
     <body class="pagina-bli">
