se cambia la parte git por un inicio de sesion funcional mediante formulario

--- a/codigo/biblioteca.html
+++ b/codigo/biblioteca.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
     <head>
         <title><h1>BIBLIOTECA DE CODIGO</h1></title>
-        <link rel="stylesheet" href="../estilos css/estilobli.css"              
+        <link rel="stylesheet" href="../estilos css/estilobli.css">          
     </head>
 
     <body class="pagina-bli">
