--- a/codigo/webpri.html
+++ b/codigo/webpri.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
     <head>
         <title>PROGRAMACION DESDE 0</title>
         <link rel="stylesheet" href="../estilos css/estilospri.css">
