inicio nueva seccion de terminos de git

--- a/codigo/webpri.html
+++ b/codigo/webpri.html
@@ -7,7 +7,7 @@
     <body class="pagina-inicio">
         <h1>PROGRAMACION</h1>
         <ol>
-            <li><a href="cursogit.html">Git y sus tres estados</a></li>
+            <li><a href="webgit.html">Git y sus tres estados</a></li>
             <li><a href="biblioteca.html">Biblioteca de codigo</a></li> 
 
         </ol>
